# VEIL

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  TZ.txt
cmake/: Dependencies.cmake  ProjectOptions.cmake  Warnings.cmake
configs/: veil-server.conf.example
docs/: build_windows.md  deployment_guide.md  ipc_protocol.md  windows_routing.md  windows_service.md  windows_tun.md
examples/: demo.cpp
include/veil/config/: config.hpp
include/veil/crypto/: chacha20poly1305.hpp  crypto.hpp  hkdf.hpp  x25519.hpp
include/veil/handshake/: handshake.hpp
include/veil/mux/: ack_bitmap.hpp  fragment_assembler.hpp  rate_limiter.hpp  reorder_buffer.hpp  replay_window.hpp  retransmission.hpp  session_rotator.hpp
include/veil/packet/: frame.hpp  packet_builder.hpp  packet_parser.hpp
include/veil/transport/: transport_session.hpp  udp_socket.hpp
include/veil/utils/: logging.hpp  time.hpp
scripts/dev/: netem-loopback.sh
src/: CMakeLists.txt
src/common/crypto/: crypto_engine.cpp  secure_buffer.h
src/common/handshake/: handshake_processor.cpp  handshake_processor.h
src/common/ipc/: ipc_protocol.h
src/common/logging/: logger.h
src/common/obfuscation/: obfuscation_profile.cpp  obfuscation_profile.h
src/common/packet/: packet_builder.cpp  packet_builder.h
src/common/session/: replay_window.cpp
src/config/: config.cpp
src/crypto/: chacha20poly1305.cpp  crypto.cpp  hkdf.cpp  x25519.cpp
src/gui-client/: connection_widget.cpp  diagnostics_widget.cpp  settings_widget.cpp
src/handshake/: handshake.cpp
src/mux/: ack_bitmap.cpp  fragment_assembler.cpp  rate_limiter.cpp  reorder_buffer.cpp  replay_window.cpp  retransmission.cpp  session_rotator.cpp
src/packet/: frame.cpp  packet_builder.cpp  packet_parser.cpp
src/tools/: CMakeLists.txt  transport_bench.cpp
src/transport/: transport_session.cpp  udp_socket.cpp
src/transport/mux/: ack_bitmap.cpp  fragment_reassembly.cpp  fragment_reassembly.h  frame.h  mux_codec.cpp  mux_codec.h  retransmit_buffer.cpp  retransmit_buffer.h
src/transport/session/: transport_session.cpp  transport_session.h
src/transport/udp_socket/: udp_socket.cpp  udp_socket.h
src/tun/: routing_linux.cpp  routing_windows.cpp  tun_device_linux.cpp  tun_device_windows.cpp
src/utils/: logging.cpp  time.cpp
tests/: crypto_test.cpp  handshake_test.cpp  integration_test.cpp  mux_test.cpp  packet_test.cpp  transport_test.cpp
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt  handshake_replay_cache_tests.cpp  obfuscation_tests.cpp  packet_tests.cpp  retransmit_buffer_tests.cpp
